--- a/src/app/country/country.html
+++ b/src/app/country/country.html
@@ -1,1 +1,22 @@
-<p>country works!</p>
+<h1>Country Data</h1>
+
+<table class="table table-striped">
+  <thead>
+    <tr>
+      <th>ID</th>
+      <th>Name</th>
+      <th>Iso2</th>
+      <th>Iso3</th>
+    </tr>
+  </thead>
+  <tbody>
+    @for (country of countries; track $index) {
+      <tr>
+        <td><a [routerLink]="['/country-population', country.id]">{{ country.id }}</a></td>
+        <td>{{ country.name }}</td>
+        <td>{{ country.iso2 }}</td>
+        <td>{{ country.iso3 }}</td>
+      </tr>
+    }
+  </tbody>
+</table>
