--- a/src/app/country-population/country-population.html
+++ b/src/app/country-population/country-population.html
@@ -1,1 +1,6 @@
-<p>country-population works!</p>
+<h1>Country Population</h1>
+<p>{{countryPopulation.name}} has a population of {{countryPopulation.population}}</p>
+
+<div>
+    <a [routerLink]="['/country']">Back to Countries List</a>
+</div>
