--- a/src/app/country/country.html
+++ b/src/app/country/country.html
@@ -10,7 +10,7 @@
     </tr>
   </thead>
   <tbody>
-    @for (country of countries; track $index) {
+    @for (country of (countries$ | async); track $index) {
       <tr>
         <td><a [routerLink]="['/country-population', country.id]">{{ country.id }}</a></td>
         <td>{{ country.name }}</td>
