--- a/src/app/auth/login.html
+++ b/src/app/auth/login.html
@@ -1,1 +1,12 @@
-<p>login works!</p>
+<div>
+   <h1>Login</h1>
+   <form [formGroup]="form" (ngSubmit)="onSubmit()">
+        <label>Name</label>
+        <input type="text" formControlName="username" formControlName="username">
+        <br>
+        <label>Password</label>
+        <input type="password" formControlName="password" formControlName="password">
+        <br>
+        <button type="submit">Submit</button>
+   </form>
+</div>
